# python-project-49

./: .gitignore  Makefile  README.md  pyproject.toml
brain_games/: cli.py  even_or_odd.py  games_dialog.py  games_functions.py
brain_games/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progr.py  calc.py  even_or_odd.py  gcd.py  prime.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
